--- a/src/pages/Dashboard/dashboard.scss
+++ b/src/pages/Dashboard/dashboard.scss
@@ -2,7 +2,8 @@
 .dashboard-wrapper{
     height: 100vh;
     width: 100vw;
-    background-color: #d1eaff;
+    // background-color: #d1eaff;
+    background-image: linear-gradient(to top, #bdc3c7, rgb(235, 235, 235) );
     
     .table-wrapper{
         display: flex;
@@ -12,11 +13,19 @@
         
         .table{
             width: 50%;
+
             .thead{
-                background-color: #9cd0f9;
+                background-color: rgb(216, 244, 247);
             }
             .tr{
-                background-color: #9cd0f9;
+                background-color: rgb(151, 212, 255);   
+                font-weight: 600;
+                color: #252525;
+
+                .td{
+                    padding: 8px;
+                }
+                
             }
         }
     }
@@ -29,6 +38,36 @@
         .barchart{
             margin-bottom: 2rem;
             width: 70%;
+
+            .card-wrapper{
+                height: 5rem;
+                width: 100%;
+                .p{
+                    display: flex;
+                    flex-wrap: wrap;
+                    justify-content: center;
+                    align-items: center;
+                    margin: 0;
+                    .span{
+                        // background-color: #f7f7f7;
+                        color: white;
+                        font-size: 15px;
+                        margin: 5px 5px;
+                        padding: 10px;
+                        font-weight: 700;
+                        border-radius: .2rem;
+                    }
+                    .one{
+                        background-color: cadetblue;
+                    }
+                    .two{
+                        background-color: rgb(33, 150, 243);
+                    }
+                    .three{
+                        background-color: purple;
+                    }
+                }
+            }
         }
     }
 
