docs: new changes

--- a/src/pages/Dashboard/dashboard.scss
+++ b/src/pages/Dashboard/dashboard.scss
@@ -76,7 +76,7 @@
 .svg {
     display: block;
     width: 100%;
-    height: 300px;
+    height: 33vh;
     background: #f7f7f7;
     overflow: visible;
   }
