--- a/src/pages/Dashboard/dashboard.scss
+++ b/src/pages/Dashboard/dashboard.scss
@@ -3,7 +3,7 @@
     height: 100vh;
     width: 100vw;
     // background-color: #d1eaff;
-    background-image: linear-gradient(to top, #bdc3c7, rgb(235, 235, 235) );
+    background-image: linear-gradient(to top, #eaf9ff, #dcf7ff );
     
     .table-wrapper{
         display: flex;
@@ -13,19 +13,55 @@
         
         .table{
             width: 50%;
+            border-radius: .2rem;
+            border: 1px solid white;
+            background-color: white;
 
             .thead{
-                background-color: rgb(216, 244, 247);
-            }
-            .tr{
-                background-color: rgb(151, 212, 255);   
-                font-weight: 600;
-                color: #252525;
-
-                .td{
-                    padding: 8px;
+                .tr{
+                    background-color: #84cff1;
+                    border-radius: .2rem;
+                    color: aliceblue;
+                    
+                    .td{
+                        padding: 8px 0;
+                    }
+                    .one{
+                        background-color: #F76E11 !important;
+                    }
+                    .two{
+                        background-color: #FF9F45 !important;
+                    }
+                    .three{
+                        background-color: #FFBC80 !important;
+                    }
                 }
-                
+            }
+            .tbody{
+
+                .tr{
+                    // background-color: rgb(151, 212, 255);   
+                    font-weight: 600;
+                    color: #4fbaeb;
+    
+                    .td{
+                        padding: 8px;
+                        border: 1px solid #84cff1;
+                        border-radius: .2rem;
+                    }
+                    .one{
+                        border: 1px solid #F76E11  !important;
+                        color: #F76E11;
+                    }
+                    .two{
+                        border: 1px solid #FF9F45 !important;
+                        color: #FF9F45;
+                    }
+                    .three{
+                        border: 1px solid #FFBC80 !important;
+                        color: #FFBC80;
+                    }
+                }
             }
         }
     }
@@ -58,13 +94,14 @@
                         border-radius: .2rem;
                     }
                     .one{
-                        background-color: cadetblue;
+                        background-color: #F76E11;
                     }
                     .two{
-                        background-color: rgb(33, 150, 243);
+                        background-color: #FF9F45;
                     }
                     .three{
-                        background-color: purple;
+                        background-color: #FFBC80;
+                        // color: #5c5c5c !important;
                     }
                 }
             }
